# AI_Engineer_Course

./: .gitignore  README.md  assignment3.md  pyproject.toml
assignment-3-multiagent/: README.md  canvas.py  conversation_log.txt  main.py
rags/assignment-2-rag/: README.md  indexer.py  query-langchain.py
